src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>rC_Giving__Corporate Underwriting</fullName>
        <description>Corporate Underwriting Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Donation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Complete</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Grant</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Inkind</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Complete</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Membership</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Complete</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Proposal</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Purchase</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Complete</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Transaction</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Summary__c</fullName>
        <label>Original_Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Is_Auto_Submit_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Submit Payment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Rollup_Sage_Vault_Bankcards__c</fullName>
        <label>Rollup Sage Vault Bankcards</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Rollup_Sage_Vault_Virtual_Checks__c</fullName>
        <label>Rollup Sage Vault Virtual Checks</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Account_Name__c</fullName>
        <description>used for internal optimization: uses a formula field instead of a SOQL query, in the &quot;naming an opportunity&quot; trigger</description>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Account_Number__c</fullName>
        <description>This field is only used for data import when the value for the account number is known, but the account ID is not known but the external system.</description>
        <inlineHelpText>This field is only used for data import when the value for the account number is known, but the account ID is not known but the external system.</inlineHelpText>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Acknowledged_Date__c</fullName>
        <description>Date Acknowledgement sent</description>
        <inlineHelpText>Date Acknowledgement sent</inlineHelpText>
        <label>Acknowledged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has an acknowledgement been sent?</description>
        <inlineHelpText>Has an acknowledgement been sent?</inlineHelpText>
        <label>Acknowledged?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Activity_Type__c</fullName>
        <description>Defines type of Activity associated with gift. Mirrors the Giving record type.</description>
        <inlineHelpText>Defines type of Activity associated with gift. Mirrors the Giving record type.</inlineHelpText>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inkind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Affiliation__c</fullName>
        <description>Represents groups within the organization. Each Affiliation has its own Summary record on Account.</description>
        <inlineHelpText>Represents groups within the organization. Each Affiliation has its own Summary record on Account.</inlineHelpText>
        <label>Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Group 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Allocation_Amount__c</fullName>
        <description>Amount that has currently been allocated to different Accounting Units</description>
        <inlineHelpText>Amount that has currently been allocated to different Accounting Units</inlineHelpText>
        <label>Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Anniversary_Date__c</fullName>
        <description>Automatically populated &quot;Anniversary Date&quot; of membership period.  Field is  set to Close date for sustainers.</description>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Anniversary_Renewal_Date__c</fullName>
        <description>Auto populated, this is the next upcoming anniversary date of the sustainer and will be the date when new premiums are scheduled and shipped based on the sustainer&apos;s Giving Level.  The field is set to Close date + 1 year for sustainers.</description>
        <inlineHelpText>This is the next upcoming anniversary date of the sustainer, and will be the date when new premiums are scheduled and shipped based on the sustainer&apos;s Giving Level.</inlineHelpText>
        <label>Anniversary Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Annual_Giving_Amount__c</fullName>
        <description>Annual Giving Amount is the calculated amount the donor will give from the time period of the most recent Anniversary Date to the most recent Anniversary Date + 1 year</description>
        <inlineHelpText>Annual Giving Amount is the calculated amount the donor will give from the time period of the most recent Anniversary Date to the most recent Anniversary Date + 1 year</inlineHelpText>
        <label>Annual Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Application_Deadline__c</fullName>
        <description>Deadline to submit application.</description>
        <inlineHelpText>Deadline to submit application.</inlineHelpText>
        <label>Application Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Application_ID__c</fullName>
        <description>Internal ID for the Application.</description>
        <inlineHelpText>Internal ID for the Application.</inlineHelpText>
        <label>Application ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Ask_Readiness__c</fullName>
        <description>Disposition of constituent toward committing to determined Pledge ask amount.</description>
        <inlineHelpText>Disposition of constituent toward committing to determined Pledge ask amount.</inlineHelpText>
        <label>Ask Readiness</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Available_Billing_Date__c</fullName>
        <description>Date at which the donor can be charged. e.g. Grant provisionally awarded on 1st June but activities cannot begin until funds become available for charging on 16th June.</description>
        <inlineHelpText>Date at which the donor can be charged. e.g. Grant provisionally awarded on 1st June but activities cannot begin until funds become available for charging on 16th June.</inlineHelpText>
        <label>Available Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Awarded_Grant_End_Date__c</fullName>
        <description>Date grant related projects/programs begin. Grant may be won in June but related activities do not begin until July.</description>
        <inlineHelpText>Date grant related projects/programs begin. Grant may be won in June but related activities do not begin until July.</inlineHelpText>
        <label>Awarded Grant End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Awarded_Grant_Start_Date__c</fullName>
        <description>Date grant related projects/programs end.</description>
        <inlineHelpText>Date grant related projects/programs end.</inlineHelpText>
        <label>Awarded Grant Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Best_Case_Amount__c</fullName>
        <description>Populated by trigger, displays the aggregated sum of the amounts you are likely to close per your Giving Stage configuration.</description>
        <label>Best Case Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Best_Case_Bar__c</fullName>
        <description>Formula field providing the percentage of Giving transaction dollars you are likely to close per your Giving Stage configuration.</description>
        <formula>IMAGE(&apos;/img/samples/color_yellow.gif&apos;, &apos;yellow&apos;, 10,  MIN(150, rC_Giving__Best_Case_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Best_Case_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Best_Case_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Best Case Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Best_Case_Ratio__c</fullName>
        <description>Formula field providing the percentage of Giving transaction dollars you are likely to close per your Giving Stage configuration.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Best_Case_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Best Case Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Calculated_Giving_Type__c</fullName>
        <description>Giving Type determined by roundCause rules for the specified giving type engine.</description>
        <inlineHelpText>Giving Type determined by roundCause rules for the specified giving type engine.</inlineHelpText>
        <label>Calculated Giving Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Campaign_Channel__c</fullName>
        <description>Automatically set to the related Campaign Channel value. This functionality can be controlled by custom setting.</description>
        <inlineHelpText>Defines a value which is automatically set to the related Campaign Channel value.</inlineHelpText>
        <label>Campaign Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telesales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Campaign_Response_Mechanism__c</fullName>
        <description>Formula field indicating how Campaign response is expected to come in.</description>
        <formula>TEXT(Campaign.rC_Giving__Response_Mechanism__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign: Response Mechanism</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Campaign_Source_Code__c</fullName>
        <description>Formula field displaying the &quot;Source Code&quot; of Campaign as generated by rules defined in the Source Codes configuration.</description>
        <formula>Campaign.rC_Giving__Source_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign: Source Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Campaign_Support_Designation__c</fullName>
        <description>Formula field from Campaign object reflecting general designation where pledge or funds are to be applied.</description>
        <formula>TEXT(Campaign.rC_Giving__Support_Designation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign: Support Designation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Charitable_Deduction__c</fullName>
        <description>Calculated Charitable Deduction for Planned Giving.</description>
        <inlineHelpText>Calculated Charitable Deduction for Planned Giving.</inlineHelpText>
        <label>Charitable Deduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Check_Date__c</fullName>
        <description>Auto populated check date used to pay a Giving Transaction.</description>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Check_Number__c</fullName>
        <description>Automatically populated check number used to pay a Giving Transaction.</description>
        <label>Check #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Close_Date_Time__c</fullName>
        <description>Populated by trigger, indicates the close date and time of the Giving record.</description>
        <label>Close Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Amount__c</fullName>
        <description>Includes amounts for completed transactions. See the Giving Stage configuration for more details.</description>
        <label>Closed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Bar__c</fullName>
        <description>Formula field providing the percentage of completed transactions related to this Giving record.</description>
        <formula>IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;green&apos;, 10,  MIN(150, rC_Giving__Closed_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Closed_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Closed_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Lost_Reason__c</fullName>
        <description>Reason the Giving is listed Closed Lost.</description>
        <inlineHelpText>Reason the Giving is listed Closed Lost.</inlineHelpText>
        <label>Closed Lost Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Budget Cut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ratings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Ratio__c</fullName>
        <description>Formula field providing the percentage of completed transactions related to this Giving record.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Closed_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Comments__c</fullName>
        <description>Holds Comments related to Tribute information on a Giving record.</description>
        <inlineHelpText>Holds Comments related to Tribute information on a Giving record.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Commit_Amount__c</fullName>
        <description>Populated by trigger, displays the aggregated sum of Giving Transactions  you are confident about closing.</description>
        <label>Commit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Commit_Bar__c</fullName>
        <description>Formula field providing the percentage of Giving Transactions you are confident about closing.</description>
        <formula>IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;green&apos;, 10,  MIN(150, rC_Giving__Commit_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Commit_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Commit_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Commit_Ratio__c</fullName>
        <description>Formula field providing the percentage of Giving Transactions you are confident about closing.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Commit_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Concept_Paper_Deadline__c</fullName>
        <description>Deadline for submitting required concept docs to donor. e.g. planned activities, scope and impact, competitive edge.</description>
        <inlineHelpText>Deadline for submitting required concept docs to donor. e.g. planned activities, scope and impact, competitive edge.</inlineHelpText>
        <label>Concept Paper Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Contract_Number__c</fullName>
        <description>Internal reference of the signed contract with donor.</description>
        <inlineHelpText>Internal reference of the signed contract with donor.</inlineHelpText>
        <label>Contract #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Contract_Status__c</fullName>
        <description>Status of the Grant Contract.</description>
        <inlineHelpText>Status of the Grant Contract.</inlineHelpText>
        <label>Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Giving_Amount__c</fullName>
        <description>Automatically populated, this field shows the sum of all Giving Transaction amounts assigned with a current category per your giving stage configuration.</description>
        <label>Current Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Giving_Bar__c</fullName>
        <description>Automatically populated, this field shows the percentage of all Giving Transaction amounts assigned with a current category per your giving stage configuration.</description>
        <formula>IF(rC_Giving__Current_Giving_Divergence__c &gt;= 0, IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;green&apos;, 10, MIN(150, rC_Giving__Current_Giving_Divergence__c)) + &apos; &apos; + TEXT(rC_Giving__Current_Giving_Divergence__c) + &apos;% over expected&apos;, IF(rC_Giving__Current_Giving_Divergence__c &gt; -25, IMAGE(&apos;/img/samples/color_yellow.gif&apos;, &apos;yellow&apos;, 10, MIN(150, ABS(rC_Giving__Current_Giving_Divergence__c))) + &apos; &apos; + TEXT(ABS(rC_Giving__Current_Giving_Divergence__c)) + &apos;% less than expected&apos;, IMAGE(&apos;/img/samples/color_red.gif&apos;, &apos;red&apos;, 10, MIN(150, ABS(rC_Giving__Current_Giving_Divergence__c))) + &apos; &apos; + TEXT(ABS(rC_Giving__Current_Giving_Divergence__c)) + &apos;% less than expected&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Giving Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Giving_Divergence__c</fullName>
        <description>Formula field providing the divergence of the &quot;Current Giving Amount&quot; from the &quot;Expected Giving Amount.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, CEILING(100 * (BLANKVALUE(rC_Giving__Current_Giving_Amount__c, 0) - rC_Giving__Expected_Giving_Amount__c) / rC_Giving__Expected_Giving_Amount__c))</formula>
        <label>Current Giving Divergence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Giving_Ratio__c</fullName>
        <description>Automatically populated, this field shows the percentage of all Giving Transaction amounts assigned with a current category per your giving stage configuration.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Projected_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Current_Giving_Amount__c, 0) / rC_Giving__Projected_Amount__c)))</formula>
        <label>Current Giving Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Discount_Rate_Month__c</fullName>
        <description>Month in which latest Discount Rate was populated.</description>
        <inlineHelpText>Month in which latest Discount Rate was populated.</inlineHelpText>
        <label>Discount Rate Month</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Discount_Rate_Year__c</fullName>
        <description>Year in which latest Discount Rate was populated.</description>
        <inlineHelpText>Year in which latest Discount Rate was populated.</inlineHelpText>
        <label>Discount Rate Year</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Discount_Rate__c</fullName>
        <description>Manually populated, this field indicates an interest rate a central bank charges depository institutions that borrow reserves from it.</description>
        <label>Discount Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Effective_Giving_Type_Date__c</fullName>
        <description>Formula field providing the &quot;Effective Giving Type Date.</description>
        <formula>IF(NOT(rC_Giving__Is_Giving__c), CloseDate,
IF(AND($Setup.rC_Giving__Giving_Level_Setting__c.rC_Giving__Active_Only_On_Payment__c), rC_Giving__First_Closed_Payment_Date__c,
IF(ISBLANK(rC_Giving__Summary__r.rC_Giving__Giving_Level__c), CloseDate,
IF(NOT(rC_Giving__Summary__r.rC_Giving__Giving_Level__r.rC_Giving__Active_Only_On_Payment__c), CloseDate,
IF(NOT(ISBLANK(rC_Giving__First_Closed_Payment_Date__c)), rC_Giving__First_Closed_Payment_Date__c, 
IF(NOT(ISBLANK(rC_Giving__Summary__r.rC_Giving__Giving_Level_Active_Date__c)), rC_Giving__Summary__r.rC_Giving__Giving_Level_Active_Date__c + 1, 
rC_Giving__Summary__r.rC_Giving__Giving_Level_Pending_Date__c))))))</formula>
        <label>Effective Giving Type Date</label>
        <type>Date</type>
    </fields>
</CustomObject>